tests/ui/lifetimes/issue-83753-invalid-associated-type-supertrait-hrtb.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-83753-invalid-associated-type-supertrait-hrtb.rs:5:21
   |
LL |     fn bar(foo: Foo<Target = usize>) {}
   |                     ^^^^^^^^^^^^^^ associated type not allowed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0229`.
